[package]
name = "sitter-ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
anyhow = "1.0.86"
smallbitvec = "2.5.3"
clap = { version = "4.5.7", features = ["derive"] }
quote = "1.0.36"
syn = { version = "2.0.67", features = ["full"] }
proc-macro2 = "1.0.86"
tree-sitter = "0.22.6"
convert_case = "0.6.0"
log = "0.4.21"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
